--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,7 @@
     "@reduxjs/toolkit": "^2.6.0",
     "aws-amplify": "^6.5.1",
     "axios": "^1.8.1",
-    "data-fns": "^1.1.0",
+    "crypto-js": "^4.1.1", 
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.7",
     "gantt-task-react": "^0.3.9",
