--- a/client/.env.local
+++ b/client/.env.local
@@ -2,3 +2,5 @@ NEXT_PUBLIC_API_BASE_URL=http://localhost:8000
 NEXT_PUBLIC_COGNITO_USER_POOL_ID="us-east-1_womVhM2JW"
 NEXT_PUBLIC_COGNITO_USER_POOL_CLIENT_ID="kidk5ms9vntasu33e9j5o7p7"
 NEXT_PUBLIC_COGNITO_CLIENT_SECRET="1qcuvdjf56e9aia8tpmroptc4n9kj39rmgov3300u6b44320qcln"
+NEXT_PUBLIC_COGNITO_REGION="us-east-1"
+
